system/authelia/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authelia
spec:
  selector:
    app: authelia
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9091
