system/authelia/authelia.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
  namespace: authelia
spec:
  selector:
    matchLabels:
      app: authelia
  replicas: 1
  template:
    metadata:
      labels:
        app: authelia
    spec:
      containers:
        - name: authelia
          image: authelia/authelia
          ports:
            - containerPort: 9091
          volumeMounts:
            - name: config
              mountPath: /config/configuration.yml
              subPath: configuration.yml
            - name: users
              mountPath: /config/users_database.yml
              subPath: users_database.yml
            - name: data
              mountPath: /data
      volumes:
        - name: config
          configMap:
            name: config
        - name: users
          secret:
            secretName: users
            optional: false
        - name: data
          persistentVolumeClaim:
            claimName: authelia-data-claim
---
apiVersion: v1
kind: Service
metadata:
  name: authelia
  namespace: authelia
spec:
  selector:
    app: authelia
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9091
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authelia
  namespace: authelia
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
        - "auth.home.lavrov.org"
      secretName: auth-tls
  rules:
    - host: "auth.home.lavrov.org"
      http:
        paths:
          - backend:
              service:
                name: authelia
                port:
                  number: 80
            path: /
            pathType: Prefix
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: auth
  namespace: authelia
spec:
  forwardAuth:
    address: http://authelia.authelia.svc.cluster.local/api/verify?rd=https://auth.home.lavrov.org
