system/authelia/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authelia
  namespace: authelia
  annotations:
#    cert-manager.io/cluster-issuer: letsencrypt
#    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
#  tls:
#    - hosts:
#        - "auth.lavrov.nl"
#      secretName: auth-tls
  ingressClassName: traefik
  rules:
    - host: "auth.next.lavrov.nl"
      http:
        paths:
          - backend:
              service:
                name: authelia
                port:
                  number: 80
            path: /
            pathType: Prefix
